# brokersystem

./: README.md  pyproject.toml
.github/workflows/: ci.yml
brokersystem/: __init__.py  agent.py
examples/: relay_file.py  relay_large_file.py  relay_repl.py  relay_segmented_video.py  relay_video_live.py  relay_video_stored.py  relay_video_webcam.py  usage_guide.py  vega_ui_preview.py
examples/assets/: relay_media_demo.webm
examples/assets/live_hls_seed/: index.m3u8  segment000.ts  segment001.ts  segment002.ts  segment003.ts  segment004.ts  segment005.ts  segment006.ts  segment007.ts  segment008.ts  segment009.ts  segment010.ts  segment011.ts
scripts/: check.py
tests/: test_agent_errors.py  test_agent_interface.py  test_broker_clients.py  test_examples_relay.py  test_templates.py
