[tool.poetry]
name = "brokersystem"
version = "0.2.10"
description = "A Python module for communicating with brokersystem"
license = "ISC"
authors = ["chocolate <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"
logzero = "^1.7"
pandas = "^2.0"
pillow = ">=10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
responses = "^0.25"
black = "^26.1.0"
pyright = "^1.1.408"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["brokersystem", "tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
