[project]
name = "brokersystem"
version = "0.3.8"
description = "A Python module for communicating with brokersystem"
license = "ISC"
authors = [
    { name = "chocolate", email = "you@example.com" },
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "requests~=2.31",
    "logzero~=1.7",
    "pandas>=2.0,<4.0",
    "pillow>=10.0",
    "websocket-client~=1.8",
]

[dependency-groups]
dev = [
    "pytest~=7.4",
    "responses~=0.25",
    "black~=26.1",
    "pyright~=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["brokersystem", "tests"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
